--- a/Capitulo_1/scss/style.scss
+++ b/Capitulo_1/scss/style.scss
@@ -1,27 +1,68 @@
 *{
   margin: 0;
   padding: 0;
-  header{
-    width: auto;
-    height: 20%;
-    background: blanchedalmond;
-  }
-  section{
-    width: auto;
-    height: 70%;
-    background: blanchedalmond;
-    #feature{
-      display: flex;
-      justify-content: center;
-      img{
-        width: 80%;
-        height: 100%;
+  background: blanchedalmond;
+  body{
+    background: #FFF7C9 url('../img/bodyBg.png') repeat-x;
+    padding-top: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    #container{
+      width: 100%;
+      header{
+        margin: 20px;
+        width: 90%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        #logo{
+          width: 50%;
+          font-style: italic;
+          font-family: Georgia,sans-serif;
+          p{
+            color: green;
+            font-size: 2em;
+
+          }
+        }
+        #menu{
+          width: 20%;
+          nav{
+            ul{
+              list-style: none;
+              display: flex;
+              flex-direction: row;
+              li{
+                margin: auto;
+                font-family: Georgia,sans-serif;
+                font-size: 1.2em;
+              }
+            }
+          }
+        }
+      }
+      section{
+        width: 100%;
+        height: 70%;
+        #feature{
+          display: flex;
+          justify-content: center;
+          img{
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+      footer{
+        width: 100%;
+        height: 10%;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
-  }
-  footer{
-    width: auto;
-    height: 10%;
-    background: blue;
   }
 }
